# python-otus-homework

./: .gitignore  README.md
.github/workflows/: djangotutorial.yml  interpreter.yml  log_analyzer.yml  python-app.yml  types_challenger.yml
cext/: README.md
crawler/: README.md  crawler.py
djangotutorial/: Dockerfile  pyproject.toml
djangotutorial/mysite/: db.sqlite3
djangotutorial/mysite/mysite/settings/: base.py  local.py  production.py
djangotutorial/mysite/polls/: models.py  tests.py  views.py
djangotutorial/mysite/polls/migrations/: 0001_initial.py
djangotutorial/mysite/polls/templates/polls/: index.html
go/: README.md  appsinstalled.pb.go  memc_load.go  memc_load_multi.go
gpt/: emotions_train_and_inference.ipynb
homework1/log_analyzer/: __main__.py  _parser.py  _report.py  _stat.py
http_server/: README.md  server.py  stress_test.sh
http_server/www/: index.html
interpreter/: pyproject.toml
interpreter/tests/: test_basic.py  test_function.py
log_analyzer/: .gitignore  README.md  pyproject.toml
log_analyzer/src/log_analyzer/: __main__.py  _config.py  _constants.py  _logger.py  _path.py  _report.py  logger.py  report.html  report.py
log_analyzer/tests/: conftest.py
log_analyzer/tests/data/reports_result/: report-2023.01.01.html
log_analyzer/tests/log_analyzer/: test_parser.py  test_path.py  test_report.py
ml_model_serving/: README.md  pyproject.toml
ml_model_serving/src/ml_model_serving/: __init__.py  main.py  models.py
ml_model_serving/src/ml_model_serving/handlers/: login.py  models.py  ping.py
multithread/: README.md  memc_load.py  memc_load_multi.py
numpy_logic_regression/: homework.ipynb
numpy_logic_regression/dmia/: gradient_check.py
numpy_logic_regression/dmia/classifiers/: logistic_regression.py
pandas_analyze/: analitics.ipynb
scoring_api/: README.md  auth.py  data.py  fields.py  main.py  pyproject.toml  requests.py  server.py
scoring_api/src/scoring_api/: __main__.py  auth.py  data.py  fields.py  main.py  scoring.py  server.py  store.py
scoring_api/tests/: test.py
scoring_api/tests/scoring_api/: test_functional.py
scoring_api/tests/scoring_api/unittests/: test_auth.py  test_fields.py
types_challenger/: Dockerfile  Makefile  run_lint.sh
types_challenger/src/basic/: any.py  dict.py  final.py  kwargs.py  list.py  optional.py  parameter.py  tuple.py  typealias.py  variable.py
warehouse/: pyproject.toml
warehouse/src/warehouse/: main.py
warehouse/src/warehouse/domain/: dto.py  exceptions.py  repositories.py  services.py  unit_of_work.py
warehouse/src/warehouse/infrastructure/: models.py  orm.py  repositories.py  unit_of_work.py
warehouse/tests/test_domain/: test_services.py
warehouse/tests/test_infrastructure/: test_repositories.py
